# skills-analyzer.socket.agency

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.json  pyproject.toml
docs/: HANDOFF-M7-M8.md
src/analyzer/: __init__.py  analyze.py  bundle.py  config.py  decode.py  findings.py  models.py  scoring.py
src/analyzer/ingest/: __init__.py  archive.py  directory.py  git.py  text.py
src/analyzer/judges/: __init__.py  client.py  fake.py  panel.py  types.py
src/analyzer/layers/: __init__.py  ast_python.py  ast_shell.py  manifest.py  obfuscation.py  static_rules.py  supply_chain.py
src/analyzer/render/: __init__.py  sarif.py
src/analyzer/rules/: __init__.py  engine.py
src/analyzer/rules/corpus/: exfiltration.yaml  guardrail.yaml  injection.yaml  secrets.yaml
tests/: test_analyze_integration.py  test_ast_python.py  test_ast_shell.py  test_decode.py  test_eval_harness.py  test_git_ingest.py  test_ingest.py  test_judges.py  test_manifest.py  test_obfuscation.py  test_rule_engine.py  test_sarif.py  test_scoring.py  test_self_scan.py  test_static_rules.py  test_supply_chain.py
tests/eval/: harness.py
web/: package.json
web/src/components/: ScanForm.test.tsx  ScanForm.tsx
web/src/components/ui/: select.tsx
